# BasicAlgorithm

./: .gitignore  BasicAlgorithm.sln  CMakeLists.txt  LICIENSE  README.md  ReadMe.md
CubicSpline/: CMakeLists.txt  CubicSpline.md
CubicSpline/MySpline/: CMakeLists.txt
CubicSpline/MySpline/include/: CubicSpline.hpp
CubicSpline/MySpline/src/: main.cpp
CubicSpline/tkSpline/: CMakeLists.txt  main.cpp  spline.h
HammingDistance/: CMakeLists.txt  main.cpp
PolyRoots/: CMakeLists.txt
PolyRoots/include/: PolyRoots.h
PolyRoots/src/: PolyRoots.cpp  main.cpp
Q01_HammingWeight/: Q01_HammingWeight.vcxproj  Q01_TestMain.cpp
